--- a/DeveloperCommunityApp/src/main/resources/application.properties
+++ b/DeveloperCommunityApp/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/developercommunity
-logging.level.org.springframework.boot.autoconfigure=ERROR
+spring.datasource.url=jdbc\:postgresql\://localhost\:5432/developercommunityapp
+server.port=8082
+Debug=false
 spring.datasource.username=postgres
+cg.app.jwtSecret=cgSecretKey
+cg.app.jwtExpirationMs=86400000
 spring.datasource.password=Sneha@0201
 spring.jpa.show-sql=true
-debug=true
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
